fix filter util, bump vaadin 24.1.1, bump spring boot 3.1.1