@@ -127,7 +127,10 @@ public class ContentFilterUtil {
 
 	private static List<?> mapListContents(Collection<?> payload, UnaryOperator<Object> transformation,
 			Predicate<Object> predicate) {
-		return payload.stream().map(o -> mapElement(o, transformation, predicate)).toList();
+		// Attention: Do not replace with .toList() instead of Collectors.toList(). The
+		// Axon integration will break, as Axon Server is not able to handle classes
+		// like ListN or List12
+		return payload.stream().map(o -> mapElement(o, transformation, predicate)).collect(Collectors.toList());
 	}
 
 	private static Set<?> mapSetContents(Collection<?> payload, UnaryOperator<Object> transformation,
